|
Quick Lists
|
|
Bug ID:
|
6866585
|
|
Votes
|
0
|
|
Synopsis
|
debug code in ciObjectFactory too slow for large objects
|
|
Category
|
hotspot:compiler2
|
|
Reported Against
|
|
|
Release Fixed
|
hs16(b08),
6u18(b01) (Bug ID:2181934)
, 7(b71) (Bug ID:2182191)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
4-Low
|
|
Related Bugs
|
6845368
,
6870184
|
|
Submit Date
|
29-JUL-2009
|
|
Description
|
The attached test bigobj.java (created for bug 6845368) creates a single instance of a very large customer w/65000+ fields. It finishes in 1 second or less with a product build, but takes 5+ minutes with a fastdebug build on a fast machine.
Posted Date : 2009-07-29 20:39:39.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
collect/analyzer show:
Excl. User CPU Incl. User CPU Name
sec. % sec. %
391.494 100.00 391.494 100.00 <Total>
333.483 85.18 390.083 99.64 ciObjectFactory::get(oop)
56.239 14.37 56.239 14.37 ciObjectFactory::insert(int,ciObject*,GrowableArray<ciObject*>*)
0.310 0.08 0.310 0.08 __pollsys
0.120 0.03 0.120 0.03 ciObjectFactory::find(oop,GrowableArray<ciObject*>*)
0.100 0.03 0.400 0.10 Interpreter
Posted Date : 2009-07-29 20:39:39.0
Place the two verification loops near the top of ciObjectFactory::get() and the loop at the end of insert() under control of a new globals.hpp var, CIObjectFactoryVerify (default false). This is a short-term solution to allow 6845368 to be fixed, which includes a test case which provokes this problem.
Posted Date : 2009-08-10 19:44:14.0
http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/b32a809aab08
Posted Date : 2009-08-12 13:17:37.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |