6866585: debug code in ciObjectFactory too slow for large objects

Reviewed-by: ysr, never, kvn